Update docs with Cell Ranger install & reference build.

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,13 +33,11 @@ This THSR will support the development of bioinformatics knowledge and tool expe
 1. If time allows, experiment with alternative software tools/algorithms and compare results.    
 1. Write a short whitepaper describing analysis 
 
-# Procedures Summary
-
-## Software installation
+# Software installation
 
 All software installed to darwin server.
 
-### SRA Toolkit Install (v3.0.0)
+## SRA Toolkit Install (v3.0.0)
 
 Used for downloading the data and dumping to FASTQ format.
 
@@ -56,7 +54,7 @@ which fastq-dump
 # ~/software/sratoolkit.3.0.0-centos_linux64/bin/fastq-dump
 ```
 
-### Bioawk
+## Bioawk
 
 Used for checks on the downloaded FASTQ files.
 
@@ -64,17 +62,38 @@ Used for checks on the downloaded FASTQ files.
 conda install -c bioconda bioawk
 ```
 
+## Cell Ranger v7.0.0
 
-### Seurat 
+10X software package used in Sperenza *et al* for demultiplexing, alignment of reads to the reference genome, and counting.
+
+```
+#Install Cell Ranger
+#Dowload
+curl -o cellranger-7.0.0.tar.gz "https://cf.10xgenomics.com/releases/cell-exp/cellranger-7.0.0.tar.gz?Expires=1658197370&Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiaHR0cHM6Ly9jZi4xMHhnZW5vbWljcy5jb20vcmVsZWFzZXMvY2VsbC1leHAvY2VsbHJhbmdlci03LjAuMC50YXIuZ3oiLCJDb25kaXRpb24iOnsiRGF0ZUxlc3NUaGFuIjp7IkFXUzpFcG9jaFRpbWUiOjE2NTgxOTczNzB9fX1dfQ__&Signature=LdEnu0IbaKMH~3yk2tzzPYY8ZKc6YP804IIUoRfEMkpNHYGfStcDtrvDIH51l2M9MBaK0ZJLdyq6QJ8Hyup8LhU49jGNJTlDtYR62RyLtb~rww1x7~9fmpF0FyLxoInerXnP2AI7wb47eoj7YEgz9G6OmcwhBUfQgax86Sc~uSq7iBPkOhUtboYxj6v1U6Y2tW5HcTto5k3YagzhA4eo6QAe87XC~Y~AkEOKAFQCOWm3aBYfZnn7-sbwtaz~kwEoAFkI1rf9u4Sc~HINv-qt-f5WicA8BVR~J4SZ0uS8vzmO5WJ36bfLpVdPAMRhXmMFpp~UcxRqhGS-C8zDo1l~lA__&Key-Pair-Id=APKAI7S6A5RYOXBWRPDA"
+
+#Extract
+tar -xzvf cellranger-7.0.0.tar.gz
+
+#Add the following to .bashrc
+export PATH=$PATH:$HOME/software/cellranger-7.0.0
+```
+
+## Seurat 
 
 Seurat is an R package for scRNAseq analysis.  Because the current version (Seurat 4.1.1) is only compatible with R 4.0 or greater, we rand into a compatibility issue with the darwin server's R install (R v3.6.0).
 
 ```
 ```
 
+# Procedures Summary
+
 ## Data acquisition
 
 * Data files for Sperenza *et al.* SRA project SRP278622 were downloaded using SRA Toolkit v3.0.0, using the `prefetch` and `fasterq-dump` commands (see [get_data.sh](./data/raw/get_data.sh))
 * SRA accession list (for batch download), downloaded from: [SRA Project Page - SRP278622 ](https://www.ncbi.nlm.nih.gov/sra?term=SRP278622)
 * SRA Run Info (file/run metadata) downloaded from [SRA Experiment link for Project - PRJNA658976](https://www.ncbi.nlm.nih.gov/sra?linkname=bioproject_sra_all&from_uid=658976)
+
+## Align and count with Cell Ranger
+
+* Reference file with both the African Green Monkey (ChlSab1.1) and COVID (SARS_CoV2) genome builds was created using the code in [build_refs.sh](./data/raw/build_refs.sh)).
 
